change jumbotron color

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,6 @@
-body {
-    color:yellowgreen;
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color:grey;
+  border-radius: 0.0rem;
 }
-
-.navbar {
-    padding 1rem;
-    background-color: blue;
-  }
-
-  
-  .btn-primary:hover {
-    background-color: red;
-    color: white;
-  }
-
-/* Footer */
-.footer{
-  background:#303036;
-  color: #d3d3d3;
-  height: 400px;
-}
-
