--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,27 @@
   background-color:grey;
   border-radius: 0.0rem;
 }
+
+.btn-primary {
+  color: #fff;
+  background-color: #2A9FD6;
+  border-color: #2A9FD6;
+}
+
+.navbar.bg-light {
+  background-color: white !important;
+}
+
+.form-control {
+  background-color: #82d2a9;
+}
+body {
+  margin: 0;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #82d2a9;
+  text-align: left;
+  background-color: #060606;
+}
