--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
   background-repeat: no-repeat;
 }
 
+
+
 .btn-primary {
   color: #fff;
   background-color: #2A9FD6;
@@ -30,5 +32,5 @@ body {
   line-height: 1.5;
   color: #82d2a9;
   text-align: left;
-  background-color: #060606;
+  background-color:#82d2a9;
 }
